--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",     
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
